修复一些链接错误

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,3 +50,23 @@
 ins.adsbygoogle[data-ad-status="unfilled"] {
   display: none !important;
 }
+
+.page {
+  @apply p-6 xl:mx-auto xl:w-[1120px];
+}
+
+.page h1 {
+  @apply text-xl font-bold;
+}
+.page h2 {
+  @apply my-3 font-bold;
+}
+.page p {
+  @apply my-2;
+}
+.page a {
+  @apply underline;
+}
+.page ul {
+  @apply my-2 ml-4 list-outside list-disc;
+}
