--- a/styles/nprogress.css
+++ b/styles/nprogress.css
@@ -12,7 +12,7 @@
   left: 0;
 
   width: 100%;
-  height: 3px;
+  height: 4px;
 }
 
 /* Fancy blur effect */
@@ -35,17 +35,20 @@
   display: block;
   position: fixed;
   z-index: 1031;
-  top: 12px;
+  top: 50%;
   left: 50%;
-  margin-left: -9px;
+  padding: 2rem;
+  background-color: #00000050;
+  border-radius: 8px;
+  @apply -translate-x-1/2 -translate-y-1/2;
 }
 
 #nprogress .spinner-icon {
-  width: 18px;
-  height: 18px;
+  width: 24px;
+  height: 24px;
   box-sizing: border-box;
 
-  border: solid 2px transparent;
+  border: solid 4px transparent;
   border-top-color: #84cc16;
   border-left-color: #84cc16;
   border-radius: 50%;
@@ -56,7 +59,7 @@
 
 @media (min-width: 768px) {
   #nprogress .spinner {
-    top: 1px;
+    top: 50%;
   }
 }
 
