--- a/styles/nprogress.css
+++ b/styles/nprogress.css
@@ -4,7 +4,7 @@
 }
 
 #nprogress .bar {
-  background: #84cc16;
+  background: #a5ff1f;
 
   position: fixed;
   z-index: 1031;
@@ -22,7 +22,7 @@
   right: 0px;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px #84cc16, 0 0 5px #84cc16;
+  box-shadow: 0 0 10px #a5ff1f, 0 0 5px #a5ff1f;
   opacity: 1;
 
   -webkit-transform: rotate(3deg) translate(0px, -4px);
@@ -49,8 +49,8 @@
   box-sizing: border-box;
 
   border: solid 4px transparent;
-  border-top-color: #84cc16;
-  border-left-color: #84cc16;
+  border-top-color: #a5ff1f;
+  border-left-color: #a5ff1f;
   border-radius: 50%;
 
   -webkit-animation: nprogress-spinner 400ms linear infinite;
